--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,8 @@
     "moment": "^2.24.0",
     "morgan": "~1.9.0",
     "mysql2": "^1.5.3",
+    "node-fetch": "^2.6.1",
+    "request": "^2.88.2",
     "sequelize": "^4.37.8",
     "sequelize-paginate": "^1.1.6"
   },
