--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "file-saver": "^2.0.2",
     "http-proxy-middleware": "0.19.1",
     "i18n-react": "0.7.0",
+    "jwt-decode": "^3.1.2",
     "lightpick": "^1.6.0",
     "loading-dots": "^1.0.3",
     "lodash": "^4.17.15",
