--- a/frontend/package.json
+++ b/frontend/package.json
@@ -72,6 +72,7 @@
     "react-simple-checkbox": "^1.3.0",
     "react-skeleton-loader": "^1.0.4",
     "react-slick": "^0.25.2",
+    "react-step-progress": "^1.0.3",
     "reactstrap": "^8.4.1",
     "recharts": "^1.8.5",
     "redux": "4.0.1"
