--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "date-fns": "^2.11.0",
     "debug": "4.1.1",
     "dom-to-image": "^2.6.0",
+    "draft-js": "^0.11.7",
     "file-saver": "^2.0.2",
     "http-proxy-middleware": "0.19.1",
     "i18n-react": "0.7.0",
@@ -55,6 +56,7 @@
     "react-dates": "^21.8.0",
     "react-day-picker": "7.3.0",
     "react-dom": "16.8.6",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-dropzone": "^10.2.2",
     "react-export-excel": "^0.5.3",
     "react-feather": "^2.0.3",
@@ -65,6 +67,7 @@
     "react-redux": "7.1.3",
     "react-router-dom": "5.1.2",
     "react-router-redux": "4.0.8",
+    "react-rte": "^0.16.3",
     "react-s3": "^1.3.1",
     "react-scripts": "3.0.1",
     "react-select": "^3.0.8",
