update step 1 and 2

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -78,7 +78,8 @@
     "react-step-progress": "^1.0.3",
     "reactstrap": "^8.4.1",
     "recharts": "^1.8.5",
-    "redux": "4.0.1"
+    "redux": "4.0.1",
+    "rsuite": "^4.9.4"
   },
   "eslintConfig": {
     "extends": "react-app"
