--- a/frontend/package.json
+++ b/frontend/package.json
@@ -69,7 +69,7 @@
     "react-redux": "7.1.3",
     "react-router-dom": "5.1.2",
     "react-router-redux": "4.0.8",
-    "react-rte": "^0.16.3",
+    "react-rte": "https://github.com/pureworldnew/react-rte/",
     "react-s3": "^1.3.1",
     "react-scripts": "3.0.1",
     "react-select": "^3.0.8",
