--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "mocha": "^5.2.0",
-    "nodemon": "^1.17.5"
+    "nodemon": "^1.17.5",
+    "sequelize-cli": "^6.2.0"
   }
 }
